2003-06-20  Mark Mitchell  <mark@codesourcery.com>

	PR c++/10845
	* g++.dg/template/member3.C: New test.

2003-06-19  Mark Mitchell  <mark@codesourcery.com>

	PR c++/10939
	* g++.dg/template/func1.C: New test.

	PR c++/9649
	* g++.dg/template/static4.C: New test.
	* g++.old-deja/g++.other/anon7.C: Remove spurious error messages.

	PR c++/11041
	* g++.dg/init/ref7.C: New test.

2003-06-19  Matt Austern  <austern@apple.com>

	PR c++/11228
	* g++.dg/anew1.C: New test.
	* g++.dg/anew2.C: New test.
	* g++.dg/anew3.C: New test.
	* g++.dg/anew4.C: New test.
	
2003-06-19  Kazu Hirata  <kazu@cs.umass.edu>

	* gcc.c-torture/compile/simd-5.c: Don't XFAIL on H8.

2003-06-19  J"orn Rennecke <joern.rennecke@superh.com>

	* gcc.c-torture/execute/simd-4.c (main): Make expected value
	endian-dependent.

2003-06-17  Benjamin Kosnik  <bkoz@redhat.com>

	* lib/g++.exp (g++_include_flags): Tweak path to testsuite_flags.
	Remove cruft.
	
2003-06-17  Kazu Hirata  <kazu@cs.umass.edu>

	* gcc.c-torture/compile/20020604-1.c: Use dg-xfail-if for h8300.
	* gcc.c-torture/compile/961203-1.c: Likewise.
	* gcc.c-torture/compile/980506-1.c: Likewise.

2003-06-17  Mark Mitchell  <mark@codesourcery.com>

	PR c++/10712
	* g++.dg/lookup/using7.C: New test.
	
2003-06-17  Mark Mitchell  <mark@codesourcery.com>

	PR c++/11105
	* g++.dg/abi/conv1.C: Remove it.
	* g++.dg/template/conv7.C: New test.
	* g++.dg/template/conv8.C: Likewise.
	* g++.old-deja/g++.ext/pretty2.C: Do not test __FUNCTION__ for a
	conversion operator.

2003-06-17  Janis Johnson  <janis187@us.ibm.com>

	* gcc.dg/compat/compat-common.h (DEBUG_INIT): New.
	* gcc.dg/compat/scalar-by-value-1_x.c: Use it.
	* gcc.dg/compat/scalar-by-value-2_x.c: Ditto.
	* gcc.dg/compat/scalar-by-value-3_x.c: Ditto.
	* gcc.dg/compat/scalar-by-value-4_x.c: Ditto.
	* gcc.dg/compat/scalar-return-1_x.c: Ditto.
	* gcc.dg/compat/scalar-return-2_x.c: Ditto.
	* gcc.dg/compat/scalar-return-3_x.c: Ditto.
	* gcc.dg/compat/scalar-return-4_x.c: Ditto.